# stockpicker

./: .gitignore  README.md  pyproject.toml
configs/models/: multi-factor-v1.yaml
configs/screens/: us-midcap-tech.yaml
configs/strategies/: momentum-value.yaml
docs/: ARCHITECTURE.md  DATA_SOURCES.md
docs/superpowers/plans/: 2026-03-14-code-review-fixes.md  2026-03-14-stockpicker-plan.md
docs/superpowers/specs/: 2026-03-14-stockpicker-design.md
src/stockpicker/: __init__.py  logging_config.py
src/stockpicker/cli/: backtest.py  ingest.py  main.py  paper.py  report.py  score.py  screen.py
src/stockpicker/config/: loader.py  models.py
src/stockpicker/db/: store.py
src/stockpicker/db/migrations/: 001_initial.sql  002_ticker_info.sql  004_paper_trading.sql  (+1 more)
src/stockpicker/engine/: backtester.py  ingester.py  metrics_computer.py  paper_trader.py  reporter.py  scorer.py  screener.py
src/stockpicker/factors/: builtin.py
src/stockpicker/sources/: alphavantage_source.py  base.py  edgar_source.py  fred_source.py  stooq_source.py  yahoo_direct_source.py  yfinance_source.py
tests/: test_backtest_regression.py  test_backtester.py  test_cli_integration.py  test_config.py  test_custom_factor.py  test_db.py  test_edgar_source.py  test_factor_evaluation.py  test_fred_source.py  test_ingest.py  test_integration.py  test_logging.py  test_metrics_computer.py  test_paper_trader.py  test_reporter.py  test_scorer.py  test_screener.py  test_sources.py
tests/fixtures/: aapl_prices.csv  golden_backtest_expected.json  golden_backtest_prices.csv  sample_custom_factor.py
